add memory args
svn path=/trunk/; revision=7288


Former-commit-id: 32a5a7c1d87ea42c7c21bb97da14f5dc32b4ce8f